plugins {
    id 'java-library'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.vavr:vavr:1.0.0-alpha-4'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
}

java {
    toolchain {
        // The minimum language version needed to use records
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
